open graph added

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="To do list with saving tasks in local storage"
     />
+    <meta property="og:type" content="todolist" />
+    <meta property="og:image" content="../src/Utils/og-image.png" />
+    <meta property="og:title" content="To Do List" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
