updated open graph information

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,15 @@
       content="To do list with saving tasks in local storage"
     />
     <meta property="og:type" content="todolist" />
-    <meta property="og:image" content="../src/Utils/og-image.png" />
+    <meta
+      property="og:image"
+      content="https://media.discordapp.net/attachments/692326682782203985/1131009140098076682/og-image.png?width=533&height=473"
+    />
     <meta property="og:title" content="To Do List" />
+    <meta
+      property="og:description"
+      content="To do list with saving tasks in local storage"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
